# Federated-learning

./: mlflow.db
ml-agentic-platform/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ml-agentic-platform/configs/environments/: base.yaml
ml-agentic-platform/configs/prompts/: rag_system_prompt.txt
ml-agentic-platform/data/features/: ieee_cis_fraud.dvc  paysim.dvc
ml-agentic-platform/data/processed/: ieee_cis_fraud.dvc  paysim.dvc
ml-agentic-platform/data/raw/: IEEE-CIS_FRAUD.dvc  PaySim.dvc  mouse_dynamics_challenge.dvc
ml-agentic-platform/docs/: ARCHITECTURE.md  POC_ASSUMPTIONS.md
ml-agentic-platform/infra/docker/: Dockerfile  docker-compose.yml
ml-agentic-platform/infra/k8s/: deployment.yaml
ml-agentic-platform/notebooks/: ieee_cis_fraud_eda.ipynb  mouse_dynamics_eda.ipynb  paysim_eda.ipynb
ml-agentic-platform/pipelines/github_actions/: ci.yaml
ml-agentic-platform/scripts/: run_api.ps1  run_streamlit.ps1
ml-agentic-platform/src/app/api/: main.py
ml-agentic-platform/src/app/core/: logging.py  settings.py
ml-agentic-platform/src/app/data_engineering/: loaders.py
ml-agentic-platform/src/app/orchestration/: service.py
ml-agentic-platform/src/app/schemas/: __init__.py  (+2 more)
ml-agentic-platform/src/temp/: ieee.csv  paysim.csv
ml-agentic-platform/tests/: conftest.py
ml-agentic-platform/tests/integration/: test_orchestration.py  test_transaction_graph_pipeline.py
ml-agentic-platform/tests/unit/: test_dispatcher_policy.py  test_federated_no_flwr.py  test_federated_tabular.py  test_health.py  test_mouse_authentication.py  test_mouse_dynamics_pipeline.py  test_temporal_gnn.py  test_transaction_graph_features.py
(+69 files in other folders)
