[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-agentic-platform"
version = "0.1.0"
description = "Production-ready modular ML platform with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "networkx>=3.3",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "mlflow>=2.15.0",
  "prometheus-client>=0.20.0",
  "streamlit>=1.44.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0",
  "flwr>=1.12.0",
  "shap>=0.46.0",
  "torch>=2.4.0",
  "torch-geometric>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "dvc>=3.0.0"
]

[project.scripts]
fl-tabular-sim = "app.agents.federated_learning.tabular.cli:main"
train-graph-fraud = "app.agents.graph_fraud.temporal_gnn.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --disable-warnings"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
